terraform/network.tf
resource "azurerm_virtual_network" "main" {
  name                = "internal-network"
  address_space       = var.network_address_space
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name
}

resource "azurerm_subnet" "internal" {
  name                 = "internal"
  resource_group_name  = azurerm_resource_group.main.name
  virtual_network_name = azurerm_virtual_network.main.name
  address_prefixes     = var.subnet_address_prefixes
}

# Creates new Public IP for frontend-vm
resource "azurerm_public_ip" "frontend" {
  name                = "frontend_ip"
  resource_group_name = azurerm_resource_group.main.name
  location            = azurerm_resource_group.main.location
  allocation_method   = "Static"
  sku                 = "Standard"
}

# Creates new Public IP for backend-vm
resource "azurerm_public_ip" "backend" {
  name                = "backend_ip"
  resource_group_name = azurerm_resource_group.main.name
  location            = azurerm_resource_group.main.location
  allocation_method   = "Static"
  sku                 = "Standard"
}
